--- a/scenes/customButton/custom.module.css
+++ b/scenes/customButton/custom.module.css
@@ -10,7 +10,7 @@
    text-align: center;
    font-size: 10px;
    border-width: 1px;
-   boder-color: #4D44B5;
+   border-color: #4D44B5;
    color: 4D44B5;
    border-radius: 40px;
 }
